--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -31,6 +31,7 @@
 }
 
 .nav-links a {
+  position: relative;
   margin-right: 1.5em;
   font-size: 1rem;
   font-weight: 700;
@@ -42,6 +43,22 @@
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+  transition: all 0.2s ease;
+}
+
+.line a:hover::after {
+  background: linear-gradient(
+    120deg,
+    var(--gradient-purple),
+    var(--gradient-pink)
+  );
+  width: 100%;
+  height: 2px;
+  display: block;
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -5%;
 }
 
 @media screen and (max-width: 600px) {
