--- a/src/components/Map/map.css
+++ b/src/components/Map/map.css
@@ -1,10 +1,6 @@
-#map {
+.map-container {
+  margin: 1.5em auto;
   border-radius: 15px;
   height: 300px;
-  margin: 1.5em auto;
   max-width: 800px;
-}
-
-.map__container {
-  padding: 1rem;
 }
