--- a/src/pages/User/user.css
+++ b/src/pages/User/user.css
@@ -8,7 +8,7 @@
   object-fit: cover;
 }
 
-.user__container-user-img {
+.user__container_user-img {
   width: 85px;
   height: 85px;
   border: 3px solid #fff;
@@ -16,6 +16,24 @@
   position: absolute;
   left: calc(50% - 45px);
   top: calc(15% - 10px);
+  cursor: pointer;
+}
+
+.user__container_userImg button {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  left: calc(50% - 10px);
+  background-color: #000;
+  border-radius: 50%;
+}
+
+.user__container_userImg button img {
+  width: 100%;
+}
+
+.user__container_userImg input {
+  display: none;
 }
 
 .user__container_text-wrapper {
@@ -122,13 +140,13 @@
     padding: 1rem 3rem;
   }
 
-  .user__container-user-img {
+  .user__container_user-img {
     top: calc(20% - 5px);
   }
 }
 
 @media screen and (min-width: 1080px) {
-  .user__container-user-img {
+  .user__container_user-img {
     top: calc(25% - 10px);
   }
 }
