Changes in login auth required

--- a/frontend/src/containers/Gallery/gallery.css
+++ b/frontend/src/containers/Gallery/gallery.css
@@ -3,7 +3,7 @@
 }
 
 .user__gallery-heading {
-  border-bottom-right-radius: 0px;
+  border-bottom-right-radius: 0px !important;
   border-bottom-left-radius: 50px;
   position: absolute;
   text-align: right;
