--- a/frontend/src/containers/Testimonials/testimonials.css
+++ b/frontend/src/containers/Testimonials/testimonials.css
@@ -1,5 +1,5 @@
 .user__testimonials-heading {
-  border-bottom-right-radius: 0px;
+  border-bottom-right-radius: 0px !important;
   border-bottom-left-radius: 50px;
   position: absolute;
   text-align: right;
