--- a/frontend/src/components/DashboardForm/dashboard-form.css
+++ b/frontend/src/components/DashboardForm/dashboard-form.css
@@ -13,7 +13,7 @@
 
 .dashboard__form {
   display: flex;
-  flex-direction: column;
+  align-items: flex-start;
   justify-content: space-between;
   padding: 1rem 5rem;
 }
@@ -22,20 +22,17 @@
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 4rem 2rem;
-  margin: 1em 0;
   border-radius: 10px;
-  max-width: 650px;
+  width: clamp(500px, 100%, 800px);
   min-height: 50vh;
 }
 
 .dashboard__form_container-form {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
   width: 100%;
-  gap: 1em;
   padding: 1rem 0;
+  gap: 1rem;
 }
 
 .form-label {
@@ -45,7 +42,6 @@
 .form-input {
   display: block;
   width: 100%;
-  min-width: 250px;
   margin-top: 0.35em;
   background-color: #fff;
   padding: 1rem 1.5rem;
@@ -82,8 +78,7 @@
 .css-1pahdxg-control {
   font-size: 1rem;
   color: #757575;
-  width: 250px;
-  max-width: 100%;
+  width: 100%;
   margin-top: 0.25em;
   padding: 0 1rem;
   height: 55px;
@@ -98,4 +93,56 @@
     )
     1;
   box-shadow: none !important;
+}
+
+.form-btn {
+  padding: 1rem 2.5rem;
+  font-size: 1rem;
+  max-width: 150px;
+  width: 100%;
+  border: none;
+  margin-top: 2em;
+  box-shadow: 0 0px 20px rgba(0, 0, 0, 0.308);
+}
+
+.address-title {
+  margin-top: 1.5em;
+}
+
+#address {
+  width: 100%;
+  grid-column: 1/3;
+}
+
+/* MEDIA QUERRIES */
+@media screen and (max-width: 1300px) {
+  .dashboard__form {
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .dashboard__form_container {
+    width: 100%;
+    margin-bottom: 3em;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #address {
+    grid-column: auto;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .dashboard__form {
+    padding: 1em 2em;
+  }
+  .dashboard__form_container-form {
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  }
+
+  .form-btn {
+    max-width: 100%;
+  }
 }
