--- a/frontend/src/components/DashboardForm/DashboardCard/dashboard-card.css
+++ b/frontend/src/components/DashboardForm/DashboardCard/dashboard-card.css
@@ -1,6 +1,6 @@
 /* Dashboard Card */
 .dashboard__aside {
-  width: clamp(200px, 100%, 350px);
+  width: clamp(200px, 100%, 550px);
 }
 
 .dashboard__aside_card {
@@ -97,6 +97,12 @@
 }
 
 /* MEDIA QUERRIES */
+@media screen and (min-width: 1500px) {
+  .dashboard__aside {
+    width: clamp(200px, 100%, 800px);
+  }
+}
+
 @media screen and (max-width: 1300px) {
   .dashboard__aside {
     width: 100%;
