--- a/frontend/src/containers/Sellers/sellers.css
+++ b/frontend/src/containers/Sellers/sellers.css
@@ -20,5 +20,22 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2rem;
-  margin: 1em 0;
+  max-width: 1400px;
+  margin: 1em auto;
+}
+
+@media screen and (min-width: 1500px) {
+  .sellers__container-cards {
+    gap: 4rem 3rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .sellers__container {
+    padding: 4rem 1.5rem;
+  }
+
+  .sellers__container-title {
+    font-size: 2.5rem;
+  }
 }
