--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -28,3 +28,15 @@
   font-size: 1.1rem;
   letter-spacing: 1px;
 }
+
+@media screen and (max-width: 550px) {
+  .intro__container-title {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .intro__container-text {
+    font-size: 1rem;
+    padding: 1rem;
+    text-align: center;
+  }
+}
