--- a/frontend/src/pages/ForgotPassword/forgotpassword.css
+++ b/frontend/src/pages/ForgotPassword/forgotpassword.css
@@ -121,3 +121,9 @@
   right: 0;
   bottom: 0;
 }
+
+@media screen and (max-width: 425px) {
+  .forgot__password_container h3 {
+    text-align: center;
+  }
+}
