--- a/frontend/src/components/DashboardForm/dashboard-form.css
+++ b/frontend/src/components/DashboardForm/dashboard-form.css
@@ -16,9 +16,7 @@
   align-items: flex-start;
   justify-content: space-between;
   padding: 1rem 5rem;
-
   gap: 1em 2em;
-
 }
 
 .dashboard__form_container {
@@ -26,9 +24,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 4rem 2rem;
   border-radius: 10px;
-
-  width: clamp(500px, 100%, 800px);
-
+  width: clamp(100%, 100%, 1400px);
   min-height: 50vh;
 }
 
@@ -129,15 +125,9 @@
 @media screen and (max-width: 1300px) {
   .dashboard__form {
     min-height: 100vh;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: space-between;
   }
-
-  .dashboard__form_container {
-    width: 100%;
-    margin-bottom: 3em;
-  }
-
 }
 
 @media screen and (max-width: 768px) {
@@ -146,9 +136,7 @@
   }
 }
 
-=======
 @media screen and (max-width: 500px) {
-
   .dashboard__form {
     padding: 1em 2em;
   }
