--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -65,9 +65,108 @@ input[type="checkbox"] {
   bottom: -5%;
 }
 
-@media screen and (max-width: 600px) {
+.navbar-lists-mobile {
+  display: none;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.navbar-lists-mobile .nav-links {
+  height: 32px;
+  z-index: 1;
+}
+
+.navbar__lists_container {
+  position: absolute;
+  min-height: 100vh;
+  padding: 5rem 2rem;
+  display: flex;
+  align-items: center;
+  top: 0;
+  right: 0;
+  background: linear-gradient(
+    to bottom,
+    var(--gradient-pink),
+    var(--gradient-purple)
+  );
+}
+
+.navbar__lists_container-menu {
+  min-height: 320px;
+  height: 100%;
+  min-width: 20vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.navbar__lists_container-menu li a {
+  margin: 0;
+  color: #fff;
+  font-size: 1rem;
+}
+
+.navbar__lists_container-menu li a:hover {
+  color: rgb(24, 24, 24);
+}
+
+.navbar__lists_container-menu .btn {
+  width: 100%;
+  margin: 0;
+  background: linear-gradient(
+    120deg,
+    var(--gradient-purple),
+    var(--gradient-pink)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  position: relative;
+  overflow: hidden;
+}
+
+.navbar__lists_container-menu .btn::after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: -1;
+}
+
+.navbar__lists_container-menu .btn:hover {
+  border: 1px solid #fff;
+}
+
+.nav-toggle {
+  font-size: 2rem;
+  fill: var(--gradient-pink);
+  cursor: pointer;
+}
+
+.nav-toggle-close {
+  fill: #fff;
+  font-size: 2.5rem;
+}
+
+@media screen and (max-width: 800px) {
   .navbar {
-    flex-direction: column;
-    justify-content: center;
+    padding: 2rem;
+  }
+
+  .navbar-lists {
+    display: none;
+  }
+
+  .navbar-lists-mobile {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .navbar__lists_container-menu {
+    min-width: 35vw;
   }
 }
