--- a/frontend/src/components/Seller/seller.css
+++ b/frontend/src/components/Seller/seller.css
@@ -10,12 +10,13 @@
 }
 
 .seller__card_user-name {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
+  text-transform: capitalize;
   padding: 1rem 0;
 }
 
 .seller__card_user-title {
-  font-size: 1rem;
+  font-size: 0.9rem;
   padding-bottom: 1rem;
   color: rgb(53, 53, 53);
 }
@@ -46,4 +47,10 @@
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+}
+
+@media screen and (max-width: 650px) {
+  .seller__card {
+    max-width: 100%;
+  }
 }
