--- a/frontend/src/components/Seller/seller.css
+++ b/frontend/src/components/Seller/seller.css
@@ -5,8 +5,12 @@
   justify-content: space-between;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 1em;
-  max-width: 300px;
+  width: 100%;
   min-height: 200px;
+}
+
+.seller__card:nth-last-child(2):nth-child(odd) {
+  grid-column: 2 / span 1;
 }
 
 .seller__card_user-name {
@@ -38,6 +42,7 @@
   letter-spacing: 1.5px;
   padding: 0.5rem 1rem;
 }
+
 .seller__card_user-link:hover {
   background: linear-gradient(
     120deg,
@@ -47,6 +52,12 @@
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+}
+
+@media screen and (max-width: 930px) {
+  .seller__card:nth-last-child(2):nth-child(odd) {
+    grid-column: 1 / span 1;
+  }
 }
 
 @media screen and (max-width: 650px) {
