--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -92,6 +92,16 @@ li {
   }
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .loadingSpinnerContainer {
   position: fixed;
   top: 0;
