--- a/frontend/src/containers/Categories/categories.css
+++ b/frontend/src/containers/Categories/categories.css
@@ -18,9 +18,10 @@
 
 .categories__container_icons {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  max-width: 1150px;
+  max-width: 1080px;
   width: 100%;
   margin: 0 auto;
 }
@@ -52,13 +53,24 @@
   color: transparent;
 }
 
-.icon-others {
+.dots {
   width: 100px;
-  height: 148.19px;
-  justify-content: space-between;
+  height: 100px;
 }
 
-.icon-others .dots {
-  margin-top: 0.75rem;
-  font-size: 5rem;
+@media screen and (max-width: 768px) {
+  .icon_wrapper img,
+  .dots {
+    width: 75px;
+    height: 75px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .categories__container {
+    padding: 1.5rem;
+  }
+  .categories__container_icons {
+    gap: 2em 1em;
+  }
 }
